--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,12 +4,12 @@
       <p class="prototype__hedding">
         <%= @prototype.title %>
       </p>
-      <%= link_to @prototype.user, root_path, class: :prototype__user %>
+      <%= link_to @prototype.user.name, root_path, class: :prototype__user %>
       <% if user_signed_in? %>
         <% if current_user.id == @prototype.user.id %>
         <div class="prototype__manage">
-          <%= link_to "編集する", root_path, class: :prototype__btn %>
-          <%= link_to "削除する", root_path, class: :prototype__btn %>
+          <%= link_to "編集する", edit_prototype_path, class: :prototype__btn %>
+          <%= link_to "削除する", prototype_path(@prototype.id),data: { turbo_method: :delete }, class: :prototype__btn %>
         </div>
         <% end %>
       <% end %>
