--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -47,7 +47,7 @@
           <% @comments.each do |comment| %>
             <li class="comments_list">
               <%= comment.comment%>
-              <%= link_to comment.user.name, user_path(user.id), class: :comment_user %>
+              <%= link_to comment.user.name, user_path(comment.user.id), class: :comment_user %>
             </li>
           <% end %>
         </ul>
